--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
   assets:
+    - lib/assets/lights.json
     - test/test_resources/lights.json
     - test/test_resources/state.json
   # The following line ensures that the Material Icons font is
