package name changed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: lit
+name: lite
 description: Light Control Flutter App
 
 # The following line prevents the package from being accidentally published to
