--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   redux_thunk: ^0.4.0
+  mockito: ^5.1.0
 
 dev_dependencies:
   flutter_test:
